[package]
name = "cage"
version = "0.3.0-alpha.5"
authors = ["Eric Kidd <git@randomhacks.net>",
           "Derek Kastner <dkastner@gmail.com>"]
edition = "2018"

description = "Develop multi-pod docker-compose apps"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/cage"
documentation = "https://docs.rs/cage/"
homepage = "http://cage.faraday.io/"

[badges]
appveyor = { repository = "faradayio/cage", branch = "master", service = "github" }
travis-ci = { repository = "faradayio/cage", branch = "master" }

[[bin]]
name = "cage"
doc = false
test = true

[dev-dependencies]
cli_test_dir = "0.1.4"
copy_dir = "0.1"

[dependencies]
boondock = "0.1.0-alpha.1"
clap = { version = "2.14", features = ["yaml"] }
colored = "2.0"
compose_yml = "0.0.59"
dirs = "3.0.1"
env_logger = "0.7.1"
error-chain = "0.12.2"
failure = "0.1.7"
glob = "0.3"
handlebars = "3.0.1"
vault =  { version = "1.0.0", package = "hashicorp_vault" }
include_dir = "0.6.0"
itertools = "0.9"
lazy_static = "1.0"
log = "0.4.8"
openssl-probe = "0.1"
rand = "0.7.3"
rayon = "1.3.0"
regex = "1.3.6"
retry = "1.0.0"
semver = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.11"
shlex = "0.1"
tokio = "0.2.17"
url = "2.1.1"
# Use an older version for compatibility with `clap`.
yaml-rust = "0.3"
