[package]
name = "cage"
version = "0.4.0"
authors = ["Eric Kidd <git@randomhacks.net>",
           "Seamus Abshere <seamus@abshere.net>"]
edition = "2021"

description = "Develop multi-pod docker-compose apps"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/cage"
documentation = "https://docs.rs/cage/"
homepage = "http://cage.faraday.io/"

[badges]
appveyor = { repository = "faradayio/cage", branch = "master", service = "github" }
travis-ci = { repository = "faradayio/cage", branch = "master" }

[[bin]]
name = "cage"
doc = false
test = true

[dev-dependencies]
cli_test_dir = "0.1.4"
copy_dir = "0.1"

[dependencies]
bollard = "0.19"
clap = { version = "4.5", features = ["derive", "string"] }
clap_complete = "4.5"
colored = "3.0"
faraday_compose_yml = { git = "https://github.com/faradayio/compose_yml" }
dirs = "6.0"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
glob = "0.3"
handlebars = "6.3"
vault =  { version = "2.1", package = "hashicorp_vault", default-features = false, features = ["rustls-tls"] }
include_dir = "0.7"
itertools = "0.14"
lazy_static = "1.0"
log = "0.4.8"
rand = "0.9"
rayon = "1.3.0"
regex = "1.3.6"
retry = "2.1"
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
shlex = "1.3"
tokio = { version = "1", features = ["rt", "macros"] }
url = "2.1.1"
